--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -34,9 +34,8 @@
                         Please enter a valid email address.
                     </div>
                 </div>
-
-                <div class="d-flex justify-content-between">
-                    <button class="btn btn-success" type="submit" [disabled]="contactForm.invalid">
+                <div class="d-flex align-items-center">
+                    <button class="btn btn-success me-3" type="submit" [disabled]="contactForm.invalid">
                         <i class="bi bi-save"></i> {{ contactId ? 'Update Contact' : 'Save Contact' }}
                     </button>
                     <a routerLink="/" class="btn btn-secondary">
