--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -38,9 +38,9 @@
                     <button class="btn btn-success me-3" type="submit" [disabled]="contactForm.invalid">
                         <i class="bi bi-save"></i> {{ contactId ? 'Update Contact' : 'Save Contact' }}
                     </button>
-                    <a routerLink="/" class="btn btn-secondary">
-                        <i class="bi bi-arrow-left"></i> Back
-                    </a>
+                    <button class="btn btn-secondary" type="button" (click)="cancel()">
+                        <i class="bi bi-x-circle"></i> Cancel
+                    </button>
                 </div>
             </form>
         </div>
