--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -10,9 +10,9 @@
   <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h2>Contact List</h2>
-      <a routerLink="/create" class="btn btn-success">
+      <button class="btn btn-success" (click)="openContactForm()">
         <i class="bi bi-plus-circle"></i> Add New Contact
-      </a>
+      </button>
     </div>
     <div class="table-responsive">
       <table class="table table-hover table-bordered table-striped">
@@ -32,9 +32,9 @@
             <td>{{ contact.lastName }}</td>
             <td>{{ contact.email }}</td>
             <td class="text-center">
-              <a [routerLink]="['/edit', contact.id]" class="btn btn-warning btn-sm me-2">
+              <button class="btn btn-warning btn-sm me-2" (click)="openContactForm(contact.id)">
                 <i class="bi bi-pencil-square"></i> Edit
-              </a>
+              </button>
               <button class="btn btn-danger btn-sm" (click)="deleteContact(contact.id)">
                 <i class="bi bi-trash"></i> Delete
               </button>
